<resources>
    <string name="app_name">Pokedex App</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites </string>
    <string name="settings">Settings</string>
    <string name="type">TYPE</string>
    <string name="pokemon_num">POKEMON_TYPE</string>
    <string name="tag_edit">tag_edit</string>
    <string name="tag_check">tag_check</string>
    <string name="lang">Language</string>
    <string name="about_me">About me</string>
    <string name="about_contex">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="more">MORE INFO</string>
    <string name="about_clear">CLAER MY FAVORITES LIST</string>
    <string name="sofa">SofaScore Android Academy</string>
    <string name="sofa_class">Class 2021</string>
    <string name="sofa_score">SofaScore</string>
    <string name="about_name">App Name</string>
    <string name="abour_api">API Credit</string>
    <string name="api_credit">pokemons</string>
    <string name="developer">Developer</string>
    <string name="dev_name">Danijel Popović</string>
    <string name="abilities">Abilities</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="total">Total</string>
    <string name="pokemon_stats">Stats</string>
    <string name="evolution">Evolution</string>
    <string name="hp">HP</string>
    <string name="attack">Attack:</string>
    <string name="defence">Defenece:</string>
    <string name="sp_atc">Sp. Atk:</string>
    <string name="sp_def">Sp. Def:</string>
    <string name="speed">Speed</string>
    <string name="title_activity_pokemon_type">PokemonTypeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="offensive">Offensive</string>
    <string name="power">POWER</string>
    <string name="types">TYPES</string>
    <string name="defensive">Defensive</string>
    <string name="none">None</string>
    <string name="damage_overview">DAMAG</string>
    <string name="moves">MOVES</string>
    <string name="pokemons">POKEMONS</string>
    <string name="twice">2x</string>
    <string name="half">1/2x</string>
    <string name="zero">0x</string>
    <string name="unevolved">UNEVOLVED</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="surface_2">surface_2</string>
    <string name="_success">_success</string>
    <string name="_error">_error</string>
    <string name="cold_gray">cold_gray</string>
</resources>