<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/damage_offensive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/offensive"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/damage_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/damage_offensive"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textAlignment="center"
        android:text="@string/power"/>

    <TextView
        android:id="@+id/damage_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/damage_offensive"
        app:layout_constraintStart_toStartOf="@id/damage_power"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textAlignment="center"
        android:text="@string/types"/>

    <include
        android:id="@+id/from_twice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/type_reusable_layout"
        app:layout_constraintTop_toBottomOf="@+id/damage_power"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <include
        android:id="@+id/from_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/type_reusable_layout"
        app:layout_constraintTop_toBottomOf="@+id/from_twice"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <include
        android:id="@+id/from_zero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/type_reusable_layout"
        app:layout_constraintTop_toBottomOf="@+id/from_half"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>



    <TextView
        android:id="@+id/damage_defensive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/from_zero"
        android:layout_marginTop="32dp"
        android:text="@string/defensive"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <TextView
        android:id="@+id/damage_power2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/damage_defensive"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textAlignment="center"
        android:text="@string/power"/>

    <TextView
        android:id="@+id/damage_types2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/damage_defensive"
        app:layout_constraintStart_toStartOf="@id/damage_power2"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textAlignment="center"
        android:text="@string/types"/>

    <include
        android:id="@+id/to_twice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/type_reusable_layout"
        app:layout_constraintTop_toBottomOf="@+id/damage_power2"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <include
        android:id="@+id/to_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/type_reusable_layout"
        app:layout_constraintTop_toBottomOf="@+id/to_twice"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <include
        android:id="@+id/to_zero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/type_reusable_layout"
        app:layout_constraintTop_toBottomOf="@+id/to_half"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>